<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>

    <groupId>com.eqochat</groupId>
    <artifactId>backend</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>EqoChat Backend Parent</name>
    <description>人与数字生命协同社交平台后端服务 - 父工程</description>

    <modules>
        <!-- 框架层 -->
        <module>eqochat-framework</module>
        
        <!-- 业务层 -->
        <module>eqochat-business</module>
        
        <!-- 启动层 -->
        <module>eqochat-server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <minio.version>8.5.10</minio.version>
        <jjwt.version>0.12.3</jjwt.version>
        <lombok.version>1.18.40</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 框架层依赖 -->
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-datasource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-sms</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-websocket</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-framework-file</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 业务层 API 依赖 -->
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-user-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-world-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-agent-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-actor-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-chat-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-contact-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-project-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-credit-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-notification-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 业务层实现依赖 -->
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-world</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-actor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-chat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-contact</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-project</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-credit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.eqochat</groupId>
                <artifactId>eqochat-notification</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.2.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>21</release>
                        <fork>true</fork>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
